backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-de-con-backend
spec:
  selector:
    matchLabels:
      app: app-de-con-backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: app-de-con-backend
    spec:
      containers:
        - name: web
          image: ghcr.io/c-leri/epsi-i2-k8s-project-backend:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app-de-con-backend
spec:
  selector:
    app: app-de-con-backend
  ports:
    - port: 8080
      targetPort: 80
