frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-de-con-frontend
spec:
  selector:
    matchLabels:
      app: app-de-con-frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: app-de-con-frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/c-leri/epsi-i2-k8s-project-frontend:latest
          ports:
            - containerPort: 3001

---
apiVersion: v1
kind: Service
metadata:
  name: app-de-con-frontend
spec:
  selector:
    app: app-de-con-frontend
  ports:
    - port: 3001
      targetPort: 3001
