ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: app-de-con
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/app-de-con`)
      kind: Rule
      services:
        - name: app-de-con-frontend
          port: 80
    - match: PathPrefix(`/app-de-con/api`)
      kind: Rule
      services:
        - name: app-de-con-backend
          port: 3001
